# duckdb-elasticsearch

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: distribution-pipeline.yml  distribution.yml  tests.yml
extras/vscode/: settings.json
src/: elasticsearch_aggregate.cpp  elasticsearch_cache.cpp  elasticsearch_client.cpp  elasticsearch_common.cpp  elasticsearch_extension.cpp  elasticsearch_filter_pushdown.cpp  elasticsearch_filter_translator.cpp  elasticsearch_optimizer.cpp  elasticsearch_query.cpp  elasticsearch_schema.cpp  es_aggregate.cpp  es_client.cpp  es_common.cpp  es_filter_translator.cpp  es_query.cpp  es_search.cpp
src/include/: elasticsearch_aggregate.hpp  elasticsearch_cache.hpp  elasticsearch_client.hpp  elasticsearch_common.hpp  elasticsearch_extension.hpp  elasticsearch_filter_pushdown.hpp  elasticsearch_filter_translator.hpp  elasticsearch_optimizer.hpp  elasticsearch_query.hpp  elasticsearch_schema.hpp  es_aggregate.hpp  es_client.hpp  es_common.hpp  es_filter_translator.hpp  es_query.hpp  es_search.hpp
test/: README.md  index-config.json  sample-data.jsonl  setup-elasticsearch.sh
test/sql/: advanced_queries.test  aggregations.test  basic_queries.test  cache.test  client.test  extension.test  filter_pushdown.test  geospatial.test  limit_offset.test  nested_arrays.test  projection_limit.test  projection_pushdown.test  query_function.test  sampling.test  settings.test  text_field_keyword.test  text_fields.test  unmapped_fields.test
